--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prettier:check": "prettier --check --ignore-unknown .",
     "start": "next start",
     "seed": "node -r dotenv/config ./scripts/seed.js",
-    "seed2": "node -r dotenv/config ./scripts/seed2.js"
+    "seed2": "node -r dotenv/config ./scripts/seed2.js",
+    "seede": "node -r dotenv/config ./scripts/seede.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
@@ -23,7 +24,8 @@
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "20.5.7",
     "@vercel/postgres": "^0.5.1",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "^10.4.15",
+    "babel": "^6.23.0",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
@@ -32,12 +34,13 @@
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.372.0",
     "next": "^14.0.2",
-    "postcss": "8.4.31",
+    "next-auth": "^5.0.0-beta.19",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
