--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-auth": "^5.0.0-beta.19",
     "postcss": "^8.4.31",
     "react": "18.2.0",
+    "react-datepicker": "^7.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "tailwind-merge": "^2.3.0",
